# demo-app

./: .gitignore  Dockerfile  README.md  pyproject.toml
demo_app/: __init__.py  app.py
